# pluralsnug

./: Cargo.toml
System/: system.json
pluralsnug-lib/: Cargo.toml
pluralsnug-lib/src/: lib.rs  main.rs
pluralsnug-lib/src/format/: io.rs  mod.rs  system.rs
pluralsnug-lib/src/types/: mod.rs
